syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
    int64 first_num =1;
    int64 second_num =2;
}


message SumResponse {
    int64 result = 1;

}

service CalculatorService{
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
}